--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -33,7 +33,8 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/header-background.jpg) no-repeat top center;
+   /* background: #161415 url(../images/header-background.jpg) no-repeat top center; */
+   background: #161415;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -52,11 +53,22 @@ header .banner {
    vertical-align: middle;
    margin: 0 auto;
    width: 85%;
-   padding-bottom: 30px;s
+   padding-bottom: 30px;
    text-align: center;
 }
 
 header .banner-text { width: 100%; }
+header .typer-text h1 {
+  
+   border-right: .1em solid #fff;
+   font-size: 4vw;
+   white-space: pre;
+   line-height: 1;
+   letter-spacing: .1rem;
+   padding-top: .2em;
+   -webkit-animation: blink 1s step-end infinite;
+   animation: blink 1s step-end infinite;
+}
 header .banner-text h1 {
    font: 90px/1.1em 'opensans-bold', sans-serif;
    color: #fff;
@@ -898,6 +910,28 @@ call-to-action .button {
    position: relative;
    left: 18px;
    top: 17px;
+}
+
+.Contact_hedding {
+   font-family: Noto Sans KR,sans-serif;
+   position: relative;
+   display: inline-block;
+   font-size: 2.4em;
+   font-weight: 400;
+   margin: 30px 0;
+   color: #fff;
+}
+
+.Contact_hedding:after {
+   position: absolute;
+   content: "";
+   top: 130%;
+   height: 2px;
+   width: 50px;
+   left: 0;
+   right: 70%;
+   margin: 0 auto;
+   background: #7b7cd4;
 }
 
 
